Updated CSS for mobile responsiveness and image styling
Fixed things to be viewed on mobile

--- a/videos.html
+++ b/videos.html
@@ -22,44 +22,47 @@
         <div class="about-box">
 
             <!-- Example video item (YouTube link and description) -->
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/XqwoFS4z2w4" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
-                <p>Footage from a weekend in September of 2023 where some friends met me at the end of a bike tour for a final night of camping and relaxing. This may be the last time I ever get to camp at this particular beach on the central coast of Califronia. This was shot on Hi8, and digitized by me.</p>
+            <div class="video-item">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/XqwoFS4z2w4" allowfullscreen></iframe>
+                </div>
+                <p>Footage from a weekend in September of 2023 where some friends met me at the end of a bike tour for a final night of camping and relaxing. This may be the last time I ever get to camp at this particular beach on the central coast of California. This was shot on Hi8, and digitized by me.</p>
             </div>
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/VVXyxpWniZo" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
+
+            <div class="video-item">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/VVXyxpWniZo" allowfullscreen></iframe>
+                </div>
                 <p>Footage from the car camping portion of a Kern River trip with the boys in August 2023. This was shot on Hi8, and digitized by me.</p>
             </div>
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/SDM9SGo1qzA" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
-                <p>Some footage from a trip to Switzerland in the summer of 2023. This was shot on Hi8, and digitized by me. </p>
-            </div>
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/vG5PwUFeAW8?si=saUstKGnu5oyHjCe" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
-                <p>Some of the only footage I have of myself riding a mountain bike, as well as Drew riding his. This was made a few weeks before the Inaugural Escape LA bikepacking race in 2023. The second section of this video shows Drea and I going over our bikepacing rigs for the race. An in-depth recap of this trip can be found in the Trips section of this site. This was shot on Hi8, and digitized by me. </p>
-            </div>
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/z2yW4OZnt0U" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
-                <p>An overnight bikepacking trip in San Luis Obispo county in the Fall of 2023. I was joined by Peter McBride and Drew Taylor. The three of us left from Pete and my work, and Taylor Mihelic joined us for the climb. Once we reached our camp, we enjoyed a wonderful burrito dinner as the sun went down. We descended in the morning and enjoyed a rather warm dip follewd by some coffee before the three of us went to work later that morning. This was shot on Hi8, and digitized by me. </p>
-            </div>
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/ugz45O7889s" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
-                <p>A recap a trip in the Fall of 2021 with some friends up the Big Sur Coast. The immaculate weather on this particular weekend called for some surfing and camping. This was shot on Hi8, and digitized by me.</p>
-            </div>
-            
-            <!-- Guide for adding new videos -->
-            <!-- 
-            To add a new video: 
-            1. Copy the following block of code and paste it below the last <div class="video-item"> block.
 
-            <div class="video-item" style="text-align: left; padding: 0rem;">
-                <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen style="width: 560px; height: 315px; border: none;"></iframe>
-                <p>Description: Replace this text with a description of the video.</p>
+            <div class="video-item">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/SDM9SGo1qzA" allowfullscreen></iframe>
+                </div>
+                <p>Some footage from a trip to Switzerland in the summer of 2023. This was shot on Hi8, and digitized by me.</p>
             </div>
 
-            2. Replace "VIDEO_ID" with the ID of your YouTube video (the part of the URL after "v=").
-            3. Update the description text to match your video.
-            -->
+            <div class="video-item">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/vG5PwUFeAW8?si=saUstKGnu5oyHjCe" allowfullscreen></iframe>
+                </div>
+                <p>Some of the only footage I have of myself riding a mountain bike, as well as Drew riding his. This was made a few weeks before the Inaugural Escape LA bikepacking race in 2023. The second section of this video shows Drea and I going over our bikepacking rigs for the race. An in-depth recap of this trip can be found in the Trips section of this site. This was shot on Hi8, and digitized by me.</p>
+            </div>
+
+            <div class="video-item">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/z2yW4OZnt0U" allowfullscreen></iframe>
+                </div>
+                <p>An overnight bikepacking trip in San Luis Obispo county in the Fall of 2023. I was joined by Peter McBride and Drew Taylor. The three of us left from Pete and my work, and Taylor Mihelic joined us for the climb. Once we reached our camp, we enjoyed a wonderful burrito dinner as the sun went down. We descended in the morning and enjoyed a rather warm dip followed by some coffee before the three of us went to work later that morning. This was shot on Hi8, and digitized by me.</p>
+            </div>
+
+            <div class="video-item">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/ugz45O7889s" allowfullscreen></iframe>
+                </div>
+                <p>A recap of a trip in the Fall of 2021 with some friends up the Big Sur Coast. The immaculate weather on this particular weekend called for some surfing and camping. This was shot on Hi8, and digitized by me.</p>
+            </div>
 
         </div>
     </main>
