--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="articles.html">Articles</a>
         <a href="trips.html">Trips</a>
         <a href="videos.html">Videos</a>
-        <a href="/about.html">About</a>
+        <a href="about.html">About</a>
     </nav>
     <main>
         <div class="quick-links-box">
