--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="../index.html">thecuttycorner.com</a></h1>
+        <h1><a href="index.html">thecuttycorner.com</a></h1>
     </header>
     <div class="articles-box-title">
         <p>About</p>
