--- a/trips.html
+++ b/trips.html
@@ -298,5 +298,10 @@
         <div class="trip-item">Brian’s Big Sur Birthday</div>
         <div class="trip-item">Overnighter</div>
         <div class="trip-item">03-07-2025 - 03-09-2025</div>
+        
+        <div class="trip-item">Stagecoach 400 2025</div>
+        <div class="trip-item">Bikepacking</div>
+        <div class="trip-item">04-04-2025 - 04-05-2025</div>
+    </div>
     </div>
 </main>
