--- a/articles.html
+++ b/articles.html
@@ -20,6 +20,11 @@
     <main>
         <div class="articles-box">
             
+            <div class="article-item">
+                <a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee </a>
+                <span>4/14/2025</span>
+            </div>
+            
              <div class="article-item">
                 <a href="Articles/Article-6.html">The Importance of Packing Lists</a>
                 <span>3/20/2025</span>
