--- a/trips.html
+++ b/trips.html
@@ -275,7 +275,7 @@
         <div class="trip-item">Bikepacking</div>
         <div class="trip-item">01-01-2025 - 01-02-2025</div>
 
-        <div class="trip-item">January Sendathon ’25 Week 1: Queen Bee</div>
+        <div class="trip-item"><a href="Articles/article-7.html">January Sendathon ’25 Week 1: Queen Bee</a></div>
         <div class="trip-item">Bikepacking</div>
         <div class="trip-item">01-04-2025 - 01-05-2025</div>
 
