--- a/trips.html
+++ b/trips.html
@@ -259,7 +259,7 @@
         <div class="trip-item">Backpacking</div>
         <div class="trip-item">09-28-2024 - 09-29-2024</div>
 
-        <div class="trip-item"><a href="Articles/article-2.html">Half Dome in One Fell Swoop</a></div>
+        <div class="trip-item"><a href="Articles/Article-2.html">Half Dome in One Fell Swoop</a></div>
         <div class="trip-item">Hiking</div>
         <div class="trip-item">10-25-2024 - 10-26-2024</div>
 
@@ -275,7 +275,7 @@
         <div class="trip-item">Bikepacking</div>
         <div class="trip-item">01-01-2025 - 01-02-2025</div>
 
-        <div class="trip-item"><a href="Articles/article-7.html">January Sendathon ’25 Week 1: Queen Bee</a></div>
+        <div class="trip-item"><a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee</a> </div>
         <div class="trip-item">Bikepacking</div>
         <div class="trip-item">01-04-2025 - 01-05-2025</div>
 
