Style update, and bug fixes

--- a/trips.html
+++ b/trips.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trips - The Cutty Corner</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trips | The Cutty Corner</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1><a href="index.html" style="color: black; text-decoration: none;">thecuttycorner.com</a></h1>
-    </header>
+  <div class="floating-frame">
+    <a href="index.html">
+      <img src="images/title.png" alt="The Cutty Corner" class="site-banner">
+    </a>
 
-    <!-- Trips Page Title -->
-    <div class="about-box-title">
-        <p>Incomplete list of my travels. Certain trips will have a more detailed description or story linked.</p>
+    <div class="trips-description">
+      <p>An archive of my adventures from early 2021 to the present.</p>
     </div>
 
-    <!-- Trips Table -->
-<main>
-    <div class="trips-container">
+    <section class="section-box bordered-box">
+      <h2>Trip Log</h2>
+      <div class="trip-grid">
         <div class="trip-header">Trip</div>
         <div class="trip-header">Type</div>
         <div class="trip-header">Date</div>
 
-        <div class="trip-item">Southern Big Sur</div>
+            <div class="trip-item">Southern Big Sur</div>
         <div class="trip-item">Backpacking</div>
         <div class="trip-item">05-29-2021 - 05-31-2021</div>
 
@@ -302,5 +302,12 @@
         <div class="trip-item">Stagecoach 400 2025</div>
         <div class="trip-item">Bikepacking</div>
         <div class="trip-item">04-04-2025 - 04-05-2025</div>
-    </div>
-</main>
+      </div>
+    </section>
+  </div>
+
+ <script src="background-rotate.js"></script>
+    
+
+</body>
+</html>
