--- a/videos.html
+++ b/videos.html
@@ -1,70 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos - The Cutty Corner</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Videos | The Cutty Corner</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header with the title, clickable to go back to homepage -->
-    <header>
-        <h1><a href="index.html">thecuttycorner.com</a></h1>
-    </header>
+  <div class="floating-frame">
+    <!-- Banner that links home -->
+    <a href="index.html">
+      <img src="images/title.png" alt="The Cutty Corner" class="site-banner">
+    </a>
 
-    <!-- Videos page title -->
-    <div class="about-box-title">
-        <p>Videos</p>
+    <!-- Description of the videos section -->
+    <div class="articles-description">
+      <p>A collecrion of footage from over the years. Most videos were shot on Hi8 and digitized by me.</p>
     </div>
 
-    <!-- Main content section with the videos and descriptions -->
-    <main>
-        <div class="about-box">
+    <!-- Section for embedded videos -->
+    <section class="section-box bordered-box">
 
-            <!-- Example video item (YouTube link and description) -->
-            <div class="video-item">
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/XqwoFS4z2w4" allowfullscreen></iframe>
-                </div>
-                <p>Footage from a weekend in September of 2023 where some friends met me at the end of a bike tour for a final night of camping and relaxing. This may be the last time I ever get to camp at this particular beach on the central coast of California. This was shot on Hi8, and digitized by me.</p>
-            </div>
-
-            <div class="video-item">
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/VVXyxpWniZo" allowfullscreen></iframe>
-                </div>
-                <p>Footage from the car camping portion of a Kern River trip with the boys in August 2023. This was shot on Hi8, and digitized by me.</p>
-            </div>
-
-            <div class="video-item">
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/SDM9SGo1qzA" allowfullscreen></iframe>
-                </div>
-                <p>Some footage from a trip to Switzerland in the summer of 2023. This was shot on Hi8, and digitized by me.</p>
-            </div>
-
-            <div class="video-item">
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/vG5PwUFeAW8?si=saUstKGnu5oyHjCe" allowfullscreen></iframe>
-                </div>
-                <p>Some of the only footage I have of myself riding a mountain bike, as well as Drew riding his. This was made a few weeks before the Inaugural Escape LA bikepacking race in 2023. The second section of this video shows Drea and I going over our bikepacking rigs for the race. An in-depth recap of this trip can be found in the Trips section of this site. This was shot on Hi8, and digitized by me.</p>
-            </div>
-
-            <div class="video-item">
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/z2yW4OZnt0U" allowfullscreen></iframe>
-                </div>
-                <p>An overnight bikepacking trip in San Luis Obispo county in the Fall of 2023. I was joined by Peter McBride and Drew Taylor. The three of us left from Pete and my work, and Taylor Mihelic joined us for the climb. Once we reached our camp, we enjoyed a wonderful burrito dinner as the sun went down. We descended in the morning and enjoyed a rather warm dip followed by some coffee before the three of us went to work later that morning. This was shot on Hi8, and digitized by me.</p>
-            </div>
-
-            <div class="video-item">
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/ugz45O7889s" allowfullscreen></iframe>
-                </div>
-                <p>A recap of a trip in the Fall of 2021 with some friends up the Big Sur Coast. The immaculate weather on this particular weekend called for some surfing and camping. This was shot on Hi8, and digitized by me.</p>
-            </div>
-
+      <div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/XqwoFS4z2w4" allowfullscreen></iframe>
         </div>
-    </main>
+        <p>Footage from a weekend in September of 2023 where some friends met me at the end of a bike tour for a final night of camping and relaxing. This may be the last time I ever get to camp at this particular beach on the central coast of California.</p>
+      </div>
+
+      <div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/VVXyxpWniZo" allowfullscreen></iframe>
+        </div>
+        <p>Footage from the car camping portion of a Kern River trip with the boys in August 2023.</p>
+      </div>
+
+      <div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/SDM9SGo1qzA" allowfullscreen></iframe>
+        </div>
+        <p>Some footage from a trip to Switzerland in the summer of 2023.</p>
+      </div>
+
+      <div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/vG5PwUFeAW8?si=saUstKGnu5oyHjCe" allowfullscreen></iframe>
+        </div>
+        <p>Some of the only footage I have of myself riding a mountain bike, as well as Drew riding his. The second section of this video shows Drew and I going over our bikepacking rigs for the Inaugural Escape LA race in 2023.</p>
+      </div>
+
+      <div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/z2yW4OZnt0U" allowfullscreen></iframe>
+        </div>
+        <p>An overnight bikepacking trip in San Luis Obispo county in the Fall of 2023. We left from work, climbed into the hills, enjoyed burritos at sunset, and returned before our morning shifts.</p>
+      </div>
+
+      <div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/ugz45O7889s" allowfullscreen></iframe>
+        </div>
+        <p>A recap of a trip in the Fall of 2021 with friends up the Big Sur Coast. The immaculate weather called for some surfing and camping.</p>
+      </div>
+    </section>
+  </div>
+    
+ <script src="background-rotate.js"></script>
+    
 </body>
 </html>
