--- a/articles.html
+++ b/articles.html
@@ -23,6 +23,10 @@
       <h2>Articles</h2>
 
       <div class="quick-link-item">
+        <a href="Articles/Article-7.html">2025 Tour De Los Padres Bike and Gear Breakdown</a>
+        <span>4/26/2025</span>
+      </div>
+        <div class="quick-link-item">
         <a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee</a>
         <span>4/14/2025</span>
       </div>
