--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
     <section id="articles" class="section-box bordered-box">
       <h2>Recent Articles</h2>
+      
+       <div class="quick-link-item">
+        <a href="Articles/Article-7.html">2025 Tour De Los Padres Bike and Gear Breakdown</a>
+        <span>4/26/2025</span>
+      </div>  
       <div class="quick-link-item">
         <a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee</a>
         <span>4/14/2025</span>
@@ -51,14 +56,14 @@
  <section id="latest-trip" class="section-box bordered-box">
   <div style="display: flex; align-items: stretch; gap: 16px;">
     <div style="flex: 1;">
-      <h2>Latest Trip Write Up</h2>
+      <h2>Latest Update</h2>
       <p style="margin: 0; line-height: 1.6;">
-        <strong>January Sendathon ’25 Week 1: Queen Bee</strong><br>
-        A bikepacking overnighter in the La Panzas.<br>
-        <a href="Articles/Article-7.html">View trip report →</a>
+        <strong>2025 Tour De Los Padres Bike Check</strong><br>
+        Video walkthrough and gear breakdown of my bikepacking bike and gear.<br>
+        <a href="Articles/Article-8.html">View trip report →</a>
       </p>
     </div>
-    <img src="images/Article-7-1.jpg" alt="Trip Preview"
+    <img src="images/Article-8-1.jpg" alt="Trip Preview"
          style="height: 100%; max-height: 200px; object-fit: cover; border: 2px solid #5a9135; border-radius: 6px;" />
   </div>
 </section>
@@ -70,8 +75,5 @@
 <div id="tracker-container" style="position: fixed; bottom: 5px; right: 5px; z-index: 1000; transform: scale(0.7); opacity: 0.5;">
   <script src="https://efreecode.com/js.js" id="eXF-thecutty-0" async defer></script>
 </div>
-</body>
-</html>
-
 </body>
 </html>
