--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="Articles/Article-8.html">View trip report →</a>
       </p>
     </div>
-    <img src="images/Article-8-1.jpg" alt="Trip Preview"
+    <img src="images/Article-8-1-.jpg" alt="Trip Preview"
          style="height: 100%; max-height: 200px; object-fit: cover; border: 2px solid #5a9135; border-radius: 6px;" />
   </div>
 </section>
