Fixes and trip update

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <p style="margin: 0; line-height: 1.6;">
         <strong>2025 Tour De Los Padres Bike Check</strong><br>
         Video walkthrough and gear breakdown of my bikepacking bike and gear.<br>
-        <a href="Articles/Article-8.html">View trip report →</a>
+        <a href="Articles/Article-8.html">Take a peek →</a>
       </p>
     </div>
     <img src="images/Article-8-1-.jpg" alt="Trip Preview"
