--- a/trips.html
+++ b/trips.html
@@ -302,6 +302,10 @@
         <div class="trip-item">Stagecoach 400 2025</div>
         <div class="trip-item">Bikepacking</div>
         <div class="trip-item">04-04-2025 - 04-05-2025</div>
+          
+        <div class="trip-item">Tour De Los Padres 2025</div>
+        <div class="trip-item">Bikepacking</div>
+        <div class="trip-item">05-01-2025 - 05-03-2025</div>
       </div>
     </section>
   </div>
