--- a/index.html
+++ b/index.html
@@ -53,18 +53,21 @@
       </div>
     </section>
 
- <section id="latest-trip" class="section-box bordered-box">
-  <div style="display: flex; align-items: stretch; gap: 16px;">
+<section id="latest-trip" class="section-box bordered-box">
+  <div style="display: flex; flex-wrap: wrap; align-items: stretch; gap: 16px;">
     <div style="flex: 1;">
-      <h2>Latest Update</h2>
+      <h2>Read This!</h2>
       <p style="margin: 0; line-height: 1.6;">
-        <strong>2025 Tour De Los Padres Bike Check</strong><br>
-        Video walkthrough and gear breakdown of my bikepacking bike and gear.<br>
-        <a href="Articles/Article-8.html">Take a peek →</a>
+        <strong>Getting Started With Bikepacking</strong><br>
+        My two cents on how to get started. 'Tis the season!<br>
+        <a href="Articles/Article-1.html">Take a peek →</a>
       </p>
     </div>
-    <img src="images/Article-8-1-.jpg" alt="Trip Preview"
-         style="height: 100%; max-height: 200px; object-fit: cover; border: 2px solid #5a9135; border-radius: 6px;" />
+    <a href="Articles/Article-1.html" style="flex: 1;">
+     <img src="images/Article-1-1.jpg" alt="Trip Preview"
+     style="width: 300px; height: auto; object-fit: cover; border: 2px solid #5a9135; border-radius: 6px; float: right; margin-left: 20px;" />
+
+    </a>
   </div>
 </section>
       
