--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <section id="articles" class="section-box bordered-box">
       <h2>Recent Articles</h2>
       
+        <div class="quick-link-item">
+        <a href="Articles/Article-10.html">Arroyo Seco Summer Activities</a>
+        <span>12/02/2025</span>
+      </div>
        <div class="quick-link-item">
         <a href="Articles/Article-8.html">2025 Tour De Los Padres Bike and Gear Breakdown</a>
         <span>4/26/2025</span>
@@ -31,10 +35,7 @@
         <a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee</a>
         <span>4/14/2025</span>
       </div>
-      <div class="quick-link-item">
-        <a href="Articles/Article-6.html">The Importance of Packing Lists</a>
-        <span>3/20/2025</span>
-      </div>
+      
       <div class="quick-link-item">
         <a href="Articles/Article-1.html">Getting Started With Bikepacking</a>
         <span>12/20/2024</span>
@@ -58,13 +59,12 @@
     <div style="flex: 1;">
       <h2>Read This!</h2>
       <p style="margin: 0; line-height: 1.6;">
-        <strong>Getting Started With Bikepacking</strong><br>
-        My two cents on how to get started. 'Tis the season!<br>
+        <strong>The trip of the summer<br>
         <a href="Articles/Article-1.html">Take a peek →</a>
       </p>
     </div>
-    <a href="Articles/Article-1.html" style="flex: 1;">
-     <img src="images/Article-1-1.jpg" alt="Trip Preview"
+    <a href="Articles/Article-10.html" style="flex: 1;">
+     <img src="images/SecoRiver-1.jpeg" alt="Trip Preview"
      style="width: 300px; height: auto; object-fit: cover; border: 2px solid #5a9135; border-radius: 6px; float: right; margin-left: 20px;" />
 
     </a>
