Article, index, video updates

--- a/videos.html
+++ b/videos.html
@@ -20,8 +20,14 @@
 
     <!-- Section for embedded videos -->
     <section class="section-box bordered-box">
-
-      <div class="video-item">
+<div class="video-item">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/XJ7x4UB-ojc" allowfullscreen></iframe>
+        </div>
+        <p>Footage from my trip to Arroyo Seco in January of 2026. High flows allowed for some incredible waterfalls.</p>
+      </div>
+      
+        <div class="video-item">
         <div class="video-container">
           <iframe src="https://www.youtube.com/embed/XqwoFS4z2w4" allowfullscreen></iframe>
         </div>
