--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <h2>Recent Articles</h2>
       
         <div class="quick-link-item">
+        <a href="Articles/Article-11.html">Arroyo Seco Overnighter January 2026</a>
+        <span>01/12/2026</span>
+      </div>
+        <div class="quick-link-item">
         <a href="Articles/Article-10.html">Arroyo Seco Summer Activities</a>
         <span>12/02/2025</span>
       </div>
@@ -44,10 +48,6 @@
         <a href="Articles/Article-2.html">Half Dome in One Fell Swoop</a>
         <span>12/18/2024</span>
       </div>
-      <div class="quick-link-item">
-        <a href="Articles/Article-3.html">7.5oz Apex Open-Bottom Quilt</a>
-        <span>11/3/2024</span>
-      </div>
     </section>
 
 <section id="latest-trip" class="section-box bordered-box">
@@ -55,12 +55,12 @@
     <div style="flex: 1;">
       <h2>Read This!</h2>
       <p style="margin: 0; line-height: 1.6;">
-        <strong>The trip of the summer<br>
+        <strong>High flows and a good bush-whack in the northen Los Padres<br>
         <a href="Articles/Article-10.html">Take a peek →</a>
       </p>
     </div>
-    <a href="Articles/Article-10.html" style="flex: 1;">
-     <img src="images/SecoRiver-1.jpeg" alt="Trip Preview"
+    <a href="Articles/Article-11.html" style="flex: 1;">
+     <img src="../images/Article-11-11.JPG" alt="Trip Preview"
      style="width: 300px; height: auto; object-fit: cover; border: 2px solid #5a9135; border-radius: 6px; float: right; margin-left: 20px;" />
 
     </a>
