--- a/articles.html
+++ b/articles.html
@@ -22,7 +22,11 @@
     <section class="section-box bordered-box">
       <h2>Articles</h2>
 
-      <div class="quick-link-item">
+     <div class="quick-link-item">
+        <a href="Articles/Article-11.html">Arroyo Seco Overnighter</a>
+        <span>01/12/2026</span>
+      </div>
+     <div class="quick-link-item">
         <a href="Articles/Article-10.html">Arroyo Seco River Activities</a>
         <span>12/02/2025</span>
       </div>
