--- a/articles.html
+++ b/articles.html
@@ -22,6 +22,10 @@
     <section class="section-box bordered-box">
       <h2>Articles</h2>
 
+    <div class="quick-link-item">
+        <a href="Articles/Article-12.html">Winter Hot Springs Bikepacking</a>
+        <span>02/05/2026</span>
+      </div>
      <div class="quick-link-item">
         <a href="Articles/Article-11.html">Arroyo Seco Overnighter</a>
         <span>01/12/2026</span>
@@ -32,15 +36,15 @@
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-7.html">2025 Tour De Los Padres Bike and Gear Breakdown</a>
-        <span>4/26/2025</span>
+        <span>04/26/2025</span>
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee</a>
-        <span>4/14/2025</span>
+        <span>04/14/2025</span>
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-6.html">The Importance of Packing Lists</a>
-        <span>3/20/2025</span>
+        <span>03/20/2025</span>
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-1.html">Getting Started With Bikepacking</a>
@@ -52,15 +56,15 @@
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-4.html">Ultralight Pocket Bivy</a>
-        <span>11/3/2024</span>
+        <span>11/03/2024</span>
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-3.html">7.5oz Apex Open-Bottom Quilt</a>
-        <span>11/3/2024</span>
+        <span>11/03/2024</span>
       </div>
       <div class="quick-link-item">
         <a href="Articles/Article-5.html">Tour De Los Padres 2024 Bike Check</a>
-        <span>4/20/2024</span>
+        <span>04/20/2024</span>
       </div>
     </section>
   </div>
