--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <section id="articles" class="section-box bordered-box">
       <h2>Recent Articles</h2>
       
+      <div class="quick-link-item">
+        <a href="Articles/Article-12.html">Winter Hot Springs Bikepacking</a>
+        <span>02/05/2026</span>
+      </div>
         <div class="quick-link-item">
         <a href="Articles/Article-11.html">Arroyo Seco Overnighter January 2026</a>
         <span>01/12/2026</span>
@@ -35,11 +39,6 @@
         <a href="Articles/Article-8.html">2025 Tour De Los Padres Bike and Gear Breakdown</a>
         <span>04/26/2025</span>
       </div>  
-      <div class="quick-link-item">
-        <a href="Articles/Article-7.html">January Sendathon ’25 Week 1: Queen Bee</a>
-        <span>04/14/2025</span>
-      </div>
-      
       <div class="quick-link-item">
         <a href="Articles/Article-1.html">Getting Started With Bikepacking</a>
         <span>12/20/2024</span>
