Site changes, Style changes.

--- a/articles.html
+++ b/articles.html
@@ -20,7 +20,10 @@
 
     <!-- Articles list -->
     <section class="section-box bordered-box">
-      <h2>Articles</h2>
+      <div class="articles-header">
+        <h2>Articles</h2>
+        <span class="date-header">Date Posted</span>
+      </div>
 
     <div class="quick-link-item">
         <a href="Articles/Article-12.html">Winter Hot Springs Bikepacking</a>
@@ -69,7 +72,11 @@
     </section>
   </div>
 
- <script src="background-rotate.js"></script>
+  <script src="background-rotate.js"></script>
+
+  <div id="tracker-container">
+    <script src="https://efreecode.com/js.js" id="eXF-thecutty-0" async defer></script>
+  </div>
 
 </body>
 </html>
