--- a/trips.html
+++ b/trips.html
@@ -409,7 +409,10 @@
   </div>
 
  <script src="background-rotate.js"></script>
-    
+
+  <div id="tracker-container">
+    <script src="https://efreecode.com/js.js" id="eXF-thecutty-0" async defer></script>
+  </div>
 
 </body>
 </html>
