New Sun/Moon tools

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="stylesheet" href="../style.css"> 
+  <link rel="stylesheet" href="../style.css?v=20260211-13"> 
 </head>
 <body>
   <div class="floating-frame">
@@ -14,7 +14,7 @@
 
  <section class="section-box bordered-box">
       <p style="text-align: left;">
-        Welcome to thecuttycorner.com, a mostly outdoor-centered blog by Jake Jackson. This website began development in late 2024 with the goal of a homologous space for life's happenings. This website came from a desire to share, but a distaste with doing so through social media. After a few previous attempts of building a site with some of the popular tools available today, I never felt like the site design matched what I was going for. Modern website design is a bit boring, so I retreated to the even more boring ways of the old internet, as well as some of my favorite blog-style websites that still exist today. Shout out to bigsurtrailmap.net, goingslowly.com, buggulch.com, and the various homemade travel blogs for inspiring me to code this myself. This website serves as a refuge for my projects, trips, articles, and other creations that will grow with time. Enjoy.
+        Welcome to thecuttycorner.com, a mostly outdoor-centered blog created Jake Jackson, and hosted on the central coast of California. This website began development in late 2024 with the goal of a homologous space for life's happenings. This website came from a desire to share, but a distaste with doing so through social media. After a few previous attempts of building a site with some of the popular tools available today, I never felt like the site design matched what I was going for. Modern website design is a bit boring, so I retreated to the even more boring ways of the old internet, as well as some of my favorite blog-style websites that still exist today. Shout out to bigsurtrailmap.net, goingslowly.com, buggulch.com, and the various homemade travel blogs for inspiring me to code this myself. This website serves as a refuge for my projects, trips, articles, and other creations that will grow with time. Enjoy.
       </p>
 
       <p>This page is in the early phases of its life, so if you see something that looks awry, email thecuttycorner@gmail.com</p>
