--- a/articles.html
+++ b/articles.html
@@ -15,7 +15,7 @@
     </a>
 
     <div class="articles-description section-box">
-      <p>Below is a growing collection of reflections, project summaries, and trip notes organized by date posted.</p>
+      <p>Below is a growing collection of trip reflections, project summaries, and trip notes organized by date posted.</p>
     </div>
 
     <!-- Articles list -->
