--- a/videos.html
+++ b/videos.html
@@ -17,7 +17,7 @@
 
     <!-- Description of the videos section -->
     <div class="articles-description">
-      <p>A collection of footage from over the years. Most videos were shot on Hi8 and digitized by me.</p>
+      <p>A collection of footage from over the years. Some videos filmed on a digicam, and other videos were shot on Hi8 and digitized by me.</p>
     </div>
 
     <!-- Section for embedded videos -->
